--- a/precompiles/living-assets/Cargo.toml
+++ b/precompiles/living-assets/Cargo.toml
@@ -10,16 +10,14 @@ version = "0.1.0"
 # Substrate
 frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
 frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
-pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
 parity-scale-codec = { workspace = true, features = ["max-encoded-len"] }
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
-sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
 sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
 sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
 
 # Frontier
-fp-evm = {  git = "https://github.com/paritytech/frontier", default-features = false, branch = "polkadot-v0.9.43" }
-pallet-evm = {  git = "https://github.com/paritytech/frontier", default-features = false, branch = "polkadot-v0.9.43" }
+fp-evm = { workspace = true }
+pallet-evm = { workspace = true, features = [ "forbid-evm-reentrancy" ] }
 
 # precompiles
 precompile-utils = { workspace = true }
@@ -29,11 +27,17 @@ precompile-utils-macro = { workspace = true }
 pallet-living-assets-ownership = { path = "../../pallets/living-assets-ownership", default-features = false }
 
 [dev-dependencies]
+derive_more = { workspace = true }
+hex-literal = { workspace = true }
+serde = { workspace = true }
+
 # Substrate
 pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
 pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
 scale-info = { workspace = true, features = [ "derive" ] }
 sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
+
+precompile-utils = { workspace = true, features = [ "std", "testing" ] }
 
 [features]
 default = [ "std" ]
@@ -44,7 +48,6 @@ std = [
 	"pallet-evm/std",
 	"parity-scale-codec/std",
 	"sp-core/std",
-	"sp-io/std",
 	"sp-std/std",
     "pallet-living-assets-ownership/std",
 ]
