--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -86,7 +86,10 @@ pallet-evm-chain-id = { git = "https://github.com/paritytech/frontier", branch =
 pallet-evm-precompile-modexp = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
 pallet-evm-precompile-sha3fips = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
 pallet-evm-precompile-simple = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
-pallet-living-assets-ownership = { path = "./precompiles/pallet-living-assets-ownership", default-features = false }
+pallet-evm-living-assets-ownership = { path = "../precompiles/living-assets", default-features = false }
+
+# Precompile
+precompile-utils = { workspace = true }
 
 [features]
 default = [
@@ -155,6 +158,7 @@ std = [
 	"frame-system-benchmarking",
 	"frame-try-runtime",
 	"pallet-living-assets-ownership/std",
+	"precompile-utils/std"
 ]
 
 runtime-benchmarks = [
