--- a/precompiles/utils/Cargo.toml
+++ b/precompiles/utils/Cargo.toml
@@ -1,26 +1,20 @@
 [package]
 name = "precompile-utils"
-authors = { workspace = true }
+authors = ["StakeTechnologies", "PureStake"]
 description = "Utils to write EVM precompiles."
-edition = "2021"
 version = "0.1.0"
+edition = "2021"
 
 [dependencies]
-affix = { workspace = true }
-derive_more = { workspace = true, optional = true }
-environmental = { workspace = true }
-hex = { workspace = true }
-hex-literal = { workspace = true, optional = true }
+# There's a problem with --all-features when this is moved under dev-deps
+evm = { workspace = true, features = ["std"], optional = true }
 impl-trait-for-tuples = { workspace = true }
 log = { workspace = true }
 num_enum = { workspace = true }
-paste = { workspace = true }
-scale-info = { workspace = true, optional = true, features = [ "derive" ] }
-serde = { workspace = true, optional = true }
 sha3 = { workspace = true }
 similar-asserts = { workspace = true, optional = true }
+assert_matches = { workspace = true }
 
-# Moonbeam
 precompile-utils-macro = { path = "macro" }
 
 # Substrate
@@ -29,24 +23,23 @@ frame-system = { workspace = true }
 parity-scale-codec = { workspace = true }
 sp-core = { workspace = true }
 sp-io = { workspace = true }
+sp-runtime = { workspace = true }
 sp-std = { workspace = true }
 
 # Frontier
-evm = { workspace = true, features = [ "with-codec" ] }
 fp-evm = { workspace = true }
-pallet-evm = { workspace = true, features = [ "forbid-evm-reentrancy" ] }
+pallet-evm = { workspace = true }
 
 # Polkadot / XCM
 xcm = { workspace = true, optional = true }
 
 [dev-dependencies]
 hex-literal = { workspace = true }
-xcm = { workspace = true }
 
 [features]
 default = [ "std" ]
 std = [
-	"environmental/std",
+	"evm/std",
 	"fp-evm/std",
 	"frame-support/std",
 	"frame-system/std",
@@ -54,7 +47,8 @@ std = [
 	"parity-scale-codec/std",
 	"sp-core/std",
 	"sp-io/std",
+	"sp-runtime/std",
 	"sp-std/std",
+	"xcm/std",
 ]
-codec-xcm = [ "xcm" ]
-testing = [ "derive_more", "hex-literal", "scale-info", "serde", "similar-asserts", "std" ]
+testing = [ "similar-asserts", "std" ]
