--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -20,6 +20,8 @@ hex-literal = { version = "0.4.1", optional = true }
 log = { version = "0.4.17", default-features = false }
 scale-info = { version = "2.7.0", default-features = false, features = ["derive"] }
 smallvec = "1.10.0"
+num_enum = { workspace = true }
+serde = { workspace = true, optional = true, features = [ "derive" ] }
 
 # Substrate
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.43" }
@@ -87,6 +89,10 @@ pallet-evm-precompile-modexp = { git = "https://github.com/paritytech/frontier",
 pallet-evm-precompile-sha3fips = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
 pallet-evm-precompile-simple = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
 pallet-evm-living-assets-ownership = { path = "../precompiles/living-assets", default-features = false }
+pallet-evm-precompile-blake2 = { workspace = true }
+pallet-evm-precompile-bn128 = { workspace = true }
+pallet-evm-precompile-dispatch = { workspace = true }
+pallet-evm-precompile-ed25519 = { workspace = true }
 
 # Precompile
 precompile-utils = { workspace = true }
@@ -158,7 +164,8 @@ std = [
 	"frame-system-benchmarking",
 	"frame-try-runtime",
 	"pallet-living-assets-ownership/std",
-	"precompile-utils/std"
+	"precompile-utils/std",
+	"pallet-evm-living-assets-ownership/std"
 ]
 
 runtime-benchmarks = [
