--- a/precompiles/utils/Cargo.toml
+++ b/precompiles/utils/Cargo.toml
@@ -50,5 +50,8 @@ std = [
 	"sp-runtime/std",
 	"sp-std/std",
 	"xcm/std",
+	"log/std",
+	"num_enum/std",
+	"sha3/std",
 ]
 testing = [ "similar-asserts", "std" ]
