--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,8 @@ scale-info = { version = "2.0", default-features = false, features = [
 
 # EVM & Ethereum
 # (wasm)
-evm = { version = "0.39.0", default-features = false }
-ethereum-types = { version = "0.14", default-features = false }
+evm = { git = "https://github.com/rust-blockchain/evm", rev = "b7b82c7e1fc57b7449d6dfa6826600de37cc1e65", default-features = false }
+ethereum-types = { version = "0.14.1", default-features = false }
 ethereum = { version = "0.14.0", default-features = false }
 evm-gasometer = { version = "0.39.0", default-features = false }
 evm-runtime = { version = "0.39.0", default-features = false }
@@ -39,11 +39,11 @@ pallet-evm = { git = "https://github.com/paritytech/frontier.git", branch = "pol
 # Frontier Precompiles
 pallet-evm-precompile-blake2 = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
 pallet-evm-precompile-bn128 = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
-pallet-evm-precompile-dispatch = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
 pallet-evm-precompile-ed25519 = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
 pallet-evm-precompile-modexp = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
 pallet-evm-precompile-sha3fips = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
 pallet-evm-precompile-simple = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
+pallet-evm-living-assets-ownership = { path = "./precompiles/living-assets", default-features = false }
 
 # Polkadot/xcm
 xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.43" }
