--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -82,16 +82,15 @@ fp-self-contained = { git = "https://github.com/paritytech/frontier", branch = "
 
 # Frontier FRAME
 pallet-base-fee = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
-pallet-evm = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.43", default-features = false }
+pallet-evm = { workspace = true }
 pallet-ethereum = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.43", default-features = false }
 pallet-evm-chain-id = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
 pallet-evm-precompile-modexp = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
 pallet-evm-precompile-sha3fips = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
 pallet-evm-precompile-simple = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
-pallet-evm-living-assets-ownership = { path = "../precompiles/living-assets", default-features = false }
+pallet-evm-living-assets-ownership = { workspace = true }
 pallet-evm-precompile-blake2 = { workspace = true }
 pallet-evm-precompile-bn128 = { workspace = true }
-pallet-evm-precompile-dispatch = { workspace = true }
 pallet-evm-precompile-ed25519 = { workspace = true }
 
 # Precompile
@@ -165,7 +164,12 @@ std = [
 	"frame-try-runtime",
 	"pallet-living-assets-ownership/std",
 	"precompile-utils/std",
-	"pallet-evm-living-assets-ownership/std"
+	"pallet-evm-living-assets-ownership/std",
+	"pallet-evm-precompile-blake2/std",
+	"pallet-evm-precompile-bn128/std",
+	"pallet-evm-precompile-ed25519/std",
+	"num_enum/std",
+	"serde/std",
 ]
 
 runtime-benchmarks = [
