--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,9 +32,7 @@ evm-runtime = { version = "0.39.0", default-features = false }
 
 # Frontier
 fp-evm = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.43", default-features = false }
-pallet-evm = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.43", default-features = false, features = [
-	"forbid-evm-reentrancy"
-]}
+pallet-evm = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.43", default-features = false }
 
 # Frontier Precompiles
 pallet-evm-precompile-blake2 = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
@@ -60,8 +58,8 @@ sp-std = { git = "https://github.com/paritytech/substrate", default-features = f
 sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
 
 # Precompile utils
-precompile-utils-macro = { path = "./precompiles/utils/macro", default-features = false }
-precompile-utils = { path = "./precompiles/utils", default-features = false }
+# precompile-utils-macro = { path = "./precompiles/utils/macro", default-features = false }
+# precompile-utils = { path = "./precompiles/utils", default-features = false }
 
 # Other (wasm)
 affix = "0.1.2"
