--- a/precompiles/utils/Cargo.toml
+++ b/precompiles/utils/Cargo.toml
@@ -15,7 +15,7 @@ sha3 = { workspace = true }
 similar-asserts = { workspace = true, optional = true }
 assert_matches = { workspace = true }
 
-precompile-utils-macro = { path = "macro" }
+# precompile-utils-macro = { path = "macro" }
 
 # Substrate
 frame-support = { workspace = true }
