--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -94,7 +94,7 @@ pallet-evm-precompile-bn128 = { workspace = true }
 pallet-evm-precompile-ed25519 = { workspace = true }
 
 # Precompile
-precompile-utils = { workspace = true }
+# precompile-utils = { workspace = true }
 
 [features]
 default = [
@@ -163,7 +163,7 @@ std = [
 	"frame-system-benchmarking",
 	"frame-try-runtime",
 	"pallet-living-assets-ownership/std",
-	"precompile-utils/std",
+	# "precompile-utils/std",
 	"pallet-evm-living-assets-ownership/std",
 	"pallet-evm-precompile-blake2/std",
 	"pallet-evm-precompile-bn128/std",
