--- a/precompiles/utils/Cargo.toml
+++ b/precompiles/utils/Cargo.toml
@@ -7,34 +7,33 @@ edition = "2021"
 
 [dependencies]
 # There's a problem with --all-features when this is moved under dev-deps
-evm = { workspace = true, features = ["std"], optional = true }
-impl-trait-for-tuples = { workspace = true }
-log = { workspace = true }
-num_enum = { workspace = true }
-sha3 = { workspace = true }
-similar-asserts = { workspace = true, optional = true }
-assert_matches = { workspace = true }
+evm = { git = "https://github.com/rust-blockchain/evm", rev = "b7b82c7e1fc57b7449d6dfa6826600de37cc1e65", default-features = false, features = ["std"] }
+impl-trait-for-tuples = "0.2.1"
+num_enum = { version = "0.5.3", default-features = false }
+sha3 = { version = "0.10", default-features = false }
+similar-asserts = { version = "1.1.0", optional = true }
+assert_matches = "1.3.0"
 
-# precompile-utils-macro = { path = "macro" }
+precompile-utils-macro = { path = "macro", default-features = false }
 
 # Substrate
-frame-support = { workspace = true }
-frame-system = { workspace = true }
-parity-scale-codec = { workspace = true }
-sp-core = { workspace = true }
-sp-io = { workspace = true }
-sp-runtime = { workspace = true }
-sp-std = { workspace = true }
+frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
+frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
+parity-scale-codec = { version = "3.2.2", default-features = false }
+sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
+sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
+sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
 
 # Frontier
-fp-evm = { workspace = true }
-pallet-evm = { workspace = true }
+fp-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
+pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
 
 # Polkadot / XCM
-xcm = { workspace = true, optional = true }
+xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.43" }
 
 [dev-dependencies]
-hex-literal = { workspace = true }
+hex-literal = { version = "0.3.4" }
 
 [features]
 default = [ "std" ]
@@ -50,7 +49,6 @@ std = [
 	"sp-runtime/std",
 	"sp-std/std",
 	"xcm/std",
-	"log/std",
 	"num_enum/std",
 	"sha3/std",
 ]
