--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -20,8 +20,8 @@ hex-literal = { version = "0.4.1", optional = true }
 log = { version = "0.4.17", default-features = false }
 scale-info = { version = "2.7.0", default-features = false, features = ["derive"] }
 smallvec = "1.10.0"
-num_enum = { workspace = true }
-serde = { workspace = true, optional = true, features = [ "derive" ] }
+num_enum = { version = "0.5.3", default-features = false }
+serde = { version = "1.0.163", optional = true, features = ["derive"] }
 
 # Substrate
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.43" }
@@ -82,19 +82,19 @@ fp-self-contained = { git = "https://github.com/paritytech/frontier", branch = "
 
 # Frontier FRAME
 pallet-base-fee = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
-pallet-evm = { workspace = true }
+pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
 pallet-ethereum = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.43", default-features = false }
 pallet-evm-chain-id = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
 pallet-evm-precompile-modexp = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
 pallet-evm-precompile-sha3fips = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
 pallet-evm-precompile-simple = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
-pallet-evm-living-assets-ownership = { workspace = true }
-pallet-evm-precompile-blake2 = { workspace = true }
-pallet-evm-precompile-bn128 = { workspace = true }
-pallet-evm-precompile-ed25519 = { workspace = true }
+pallet-evm-living-assets-ownership = { path = "../precompiles/living-assets", default-features = false }
+pallet-evm-precompile-blake2 = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
+pallet-evm-precompile-bn128 = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
+pallet-evm-precompile-ed25519 = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
 
 # Precompile
-# precompile-utils = { workspace = true }
+precompile-utils = { path = "../precompiles/utils", default-features = false }
 
 [features]
 default = [
@@ -170,6 +170,7 @@ std = [
 	"pallet-evm-precompile-ed25519/std",
 	"num_enum/std",
 	"serde/std",
+	"precompile-utils/std",
 ]
 
 runtime-benchmarks = [
