--- a/pallets/living-assets-ownership/Cargo.toml
+++ b/pallets/living-assets-ownership/Cargo.toml
@@ -22,7 +22,7 @@ frame-system = { git = "https://github.com/paritytech/substrate", default-featur
 sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
 
 [dev-dependencies]
-serde = { version = "1.0.132" }
+serde = { version = "1.0.163", default-features = false }
 
 # Substrate
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
@@ -31,7 +31,7 @@ sp-runtime = { git = "https://github.com/paritytech/substrate", default-features
 
 [features]
 default = ["std"]
-runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
+runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks", "frame-support/runtime-benchmarks", "frame-system/runtime-benchmarks"]
 std = [
 	"codec/std",
 	"scale-info/std",
@@ -40,4 +40,4 @@ std = [
 	"frame-system/std",
 	"sp-arithmetic/std",
 ]
-try-runtime = [ "frame-support/try-runtime" ]
+try-runtime = [ "frame-support/try-runtime", "frame-system/try-runtime" ]
