--- a/zombienet/k8s.toml
+++ b/zombienet/k8s.toml
@@ -20,6 +20,6 @@ cumulus_based = true
 
   [parachains.collator]
   name = "ownership-collator"
-  command = "parachain-template-node"
+  command = "laos-node"
   image = "freeverseio/laos-ownership-node:latest"
   args = [ "--collator" ]
