--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -86,6 +86,9 @@ pallet-evm-chain-id = { workspace = true }
 pallet-evm-precompile-modexp = { workspace = true }
 pallet-evm-precompile-simple = { workspace = true }
 
+[dev-dependencies]
+pallet-evm-test-vector-support = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
+
 [features]
 default = [
 	"std",
