--- a/pallets/living-assets-ownership/Cargo.toml
+++ b/pallets/living-assets-ownership/Cargo.toml
@@ -20,6 +20,7 @@ frame-benchmarking = { workspace = true, optional = true }
 frame-support = { workspace = true }
 frame-system = { workspace = true }
 sp-arithmetic = { workspace = true }
+sp-core = { workspace = true }
 
 [dev-dependencies]
 serde = { workspace = true }
