--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -50,6 +50,7 @@ sp-version = { workspace = true }
 
 pallet-living-assets-ownership = { workspace = true }
 pallet-evm-living-assets-ownership = { workspace = true }
+pallet-evm-erc721 = { workspace = true }
 
 # Polkadot
 pallet-xcm = { workspace = true }
