--- a/pallets/living-assets-ownership/Cargo.toml
+++ b/pallets/living-assets-ownership/Cargo.toml
@@ -16,6 +16,9 @@ hex-literal = { workspace = true, optional = true}
 parity-scale-codec = { workspace = true, features = ["derive"] }
 scale-info = { workspace = true, features = ["derive"] }
 
+# Frontier
+pallet-evm = { workspace = true }
+
 # Substrate
 frame-benchmarking = { workspace = true, optional = true }
 frame-support = { workspace = true }
@@ -23,6 +26,7 @@ frame-system = { workspace = true }
 sp-arithmetic = { workspace = true }
 sp-core = { workspace = true }
 sp-std = { workspace = true }
+sp-runtime = { workspace = true }
 
 [dev-dependencies]
 serde = { workspace = true }
