WIP add getting initial owner for assets storage

--- a/pallets/living-assets-ownership/Cargo.toml
+++ b/pallets/living-assets-ownership/Cargo.toml
@@ -16,10 +16,16 @@ hex-literal = { workspace = true, optional = true}
 parity-scale-codec = { workspace = true, features = ["derive"] }
 scale-info = { workspace = true, features = ["derive"] }
 
+# Frontier
+pallet-evm = { workspace = true }
+pallet-ethereum = { workspace = true }
+
 # Substrate
 frame-benchmarking = { workspace = true, optional = true }
 frame-support = { workspace = true }
 frame-system = { workspace = true }
+pallet-balances = { workspace = true }
+pallet-timestamp = { workspace = true }
 sp-arithmetic = { workspace = true }
 sp-core = { workspace = true }
 sp-std = { workspace = true }
@@ -46,11 +52,18 @@ std = [
 	"frame-benchmarking/std",
 	"frame-support/std",
 	"frame-system/std",
+	"pallet-balances/std",
+	"pallet-timestamp/std",
 	"sp-arithmetic/std",
 	"sp-core/std",
 	"sp-std/std",
+	# Frontier FRAME
+	"pallet-ethereum/std",
+	"pallet-evm/std",
 ]
 try-runtime = [
 	"frame-system/try-runtime",
-	"frame-support/try-runtime"
+	"frame-support/try-runtime",
+	"pallet-evm/try-runtime",
+	"pallet-ethereum/try-runtime",
 ]
