--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -90,6 +90,7 @@ pallet-evm-precompile-simple = { workspace = true }
 bp-header-chain = { workspace = true }
 bp-messages = { workspace = true }
 bp-evochain = { workspace = true }
+bp-millau = { workspace = true }
 bp-relayers = { workspace = true }
 bp-runtime = { workspace = true }
 bp-ownership-parachain = { workspace = true }
@@ -170,6 +171,7 @@ std = [
 	"pallet-evm-living-assets-ownership/std",
 	# Bridge deps,
 	"bp-evochain/std",
+	"bp-millau/std",
 	"bp-header-chain/std",
 	"bp-messages/std",
 	"bp-ownership-parachain/std",
