--- a/pallets/living-assets-ownership/Cargo.toml
+++ b/pallets/living-assets-ownership/Cargo.toml
@@ -20,8 +20,6 @@ scale-info = { workspace = true, features = ["derive"] }
 frame-benchmarking = { workspace = true, optional = true }
 frame-support = { workspace = true }
 frame-system = { workspace = true }
-pallet-balances = { workspace = true }
-pallet-timestamp = { workspace = true }
 sp-arithmetic = { workspace = true }
 sp-core = { workspace = true }
 sp-std = { workspace = true }
@@ -48,13 +46,11 @@ std = [
 	"frame-benchmarking/std",
 	"frame-support/std",
 	"frame-system/std",
-	"pallet-balances/std",
-	"pallet-timestamp/std",
 	"sp-arithmetic/std",
 	"sp-core/std",
 	"sp-std/std",
 ]
 try-runtime = [
 	"frame-system/try-runtime",
-	"frame-support/try-runtime",
+	"frame-support/try-runtime"
 ]
