--- a/primitive/Cargo.toml
+++ b/primitive/Cargo.toml
@@ -8,9 +8,7 @@ sp-core = { workspace = true }
 sp-runtime = { workspace = true }
 
 [features]
-default = [
-	"std",
-]
+default = ["std"]
 std = [
     "sp-core/std",
     "sp-runtime/std",
