--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -47,6 +47,7 @@ sp-session = { workspace = true }
 sp-std = { workspace = true }
 sp-transaction-pool = { workspace = true }
 sp-version = { workspace = true }
+sp-io = { workspace = true }
 
 pallet-living-assets-ownership = { workspace = true }
 pallet-evm-living-assets-ownership = { workspace = true }
@@ -98,6 +99,7 @@ bridge-runtime-common = { workspace = true }
 pallet-bridge-grandpa = { workspace = true }
 pallet-bridge-messages = { workspace = true }
 pallet-bridge-relayers = { workspace = true }
+primitive = { workspace = true }
 
 [features]
 default = [
@@ -142,6 +144,7 @@ std = [
 	"sp-offchain/std",
 	"sp-runtime/std",
 	"sp-session/std",
+	"sp-io/std",
 	"sp-std/std",
 	"sp-transaction-pool/std",
 	"sp-version/std",
@@ -176,6 +179,7 @@ std = [
 	"pallet-bridge-grandpa/std",
 	"pallet-bridge-messages/std",
 	"pallet-bridge-relayers/std",
+	# "primitive/std",
 ]
 
 runtime-benchmarks = [
