--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -20,6 +20,9 @@ hex-literal = { workspace = true, optional = true }
 scale-info = { workspace = true, features = ["derive"] }
 smallvec = { workspace = true }
 
+# Runtime primitives
+ownership-parachain-primitives = { workspace = true }
+
 # Substrate
 frame-benchmarking = { workspace = true, optional = true }
 frame-executive = { workspace = true }
@@ -89,15 +92,10 @@ pallet-evm-precompile-simple = { workspace = true }
 
 # Bridge dependencies
 bp-header-chain = { workspace = true }
-bp-messages = { workspace = true }
 bp-evochain = { workspace = true }
-bp-relayers = { workspace = true }
 bp-runtime = { workspace = true }
-bp-ownership-parachain = { workspace = true }
 bridge-runtime-common = { workspace = true }
 pallet-bridge-grandpa = { workspace = true }
-pallet-bridge-messages = { workspace = true }
-pallet-bridge-relayers = { workspace = true }
 
 [dev-dependencies]
 bridge-runtime-common = { workspace = true, features = ["integrity-test"] }
@@ -173,14 +171,9 @@ std = [
 	# Bridge deps,
 	"bp-evochain/std",
 	"bp-header-chain/std",
-	"bp-messages/std",
-	"bp-ownership-parachain/std",
-	"bp-relayers/std",
 	"bp-runtime/std",
 	"bridge-runtime-common/std",
 	"pallet-bridge-grandpa/std",
-	"pallet-bridge-messages/std",
-	"pallet-bridge-relayers/std",
 ]
 
 runtime-benchmarks = [
@@ -208,8 +201,6 @@ runtime-benchmarks = [
 	"xcm-executor/runtime-benchmarks",
 	"bridge-runtime-common/runtime-benchmarks",
 	"pallet-bridge-grandpa/runtime-benchmarks",
-	"pallet-bridge-messages/runtime-benchmarks",
-	"pallet-bridge-relayers/runtime-benchmarks",
 ]
 
 try-runtime = [
@@ -241,6 +232,4 @@ try-runtime = [
 	"polkadot-runtime-common/try-runtime",
 	"sp-runtime/try-runtime",
 	"pallet-bridge-grandpa/try-runtime",
-	"pallet-bridge-messages/try-runtime",
-	"pallet-bridge-relayers/try-runtime",
 ]
