--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -92,7 +92,7 @@ pallet-evm-precompile-simple = { workspace = true }
 
 # Bridge dependencies
 bp-header-chain = { workspace = true }
-bp-evochain = { workspace = true }
+bp-laos-evolution = { workspace = true }
 bp-runtime = { workspace = true }
 bridge-runtime-common = { workspace = true }
 pallet-bridge-grandpa = { workspace = true }
@@ -169,7 +169,7 @@ std = [
 	"frame-try-runtime",
 	"pallet-evm-living-assets-ownership/std",
 	# Bridge deps,
-	"bp-evochain/std",
+	"bp-laos-evolution/std",
 	"bp-header-chain/std",
 	"bp-runtime/std",
 	"bridge-runtime-common/std",
