--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -20,9 +20,6 @@ hex-literal = { workspace = true, optional = true }
 scale-info = { workspace = true, features = ["derive"] }
 smallvec = { workspace = true }
 
-# Runtime primitives
-ownership-parachain-primitives = { workspace = true }
-
 # Substrate
 frame-benchmarking = { workspace = true, optional = true }
 frame-executive = { workspace = true }
@@ -92,15 +89,15 @@ pallet-evm-precompile-simple = { workspace = true }
 
 # Bridge dependencies
 bp-header-chain = { workspace = true }
-bp-laos-evolution = { workspace = true }
+bp-messages = { workspace = true }
+bp-evochain = { workspace = true }
+bp-relayers = { workspace = true }
 bp-runtime = { workspace = true }
+bp-ownership-parachain = { workspace = true }
 bridge-runtime-common = { workspace = true }
 pallet-bridge-grandpa = { workspace = true }
-
-[dev-dependencies]
-bridge-runtime-common = { workspace = true, features = ["integrity-test"] }
-static_assertions = { workspace = true }
-hex-literal = { workspace = true }
+pallet-bridge-messages = { workspace = true }
+pallet-bridge-relayers = { workspace = true }
 
 [features]
 default = [
@@ -169,11 +166,16 @@ std = [
 	"frame-try-runtime",
 	"pallet-evm-living-assets-ownership/std",
 	# Bridge deps,
-	"bp-laos-evolution/std",
+	"bp-evochain/std",
 	"bp-header-chain/std",
+	"bp-messages/std",
+	"bp-ownership-parachain/std",
+	"bp-relayers/std",
 	"bp-runtime/std",
 	"bridge-runtime-common/std",
 	"pallet-bridge-grandpa/std",
+	"pallet-bridge-messages/std",
+	"pallet-bridge-relayers/std",
 ]
 
 runtime-benchmarks = [
@@ -201,6 +203,8 @@ runtime-benchmarks = [
 	"xcm-executor/runtime-benchmarks",
 	"bridge-runtime-common/runtime-benchmarks",
 	"pallet-bridge-grandpa/runtime-benchmarks",
+	"pallet-bridge-messages/runtime-benchmarks",
+	"pallet-bridge-relayers/runtime-benchmarks",
 ]
 
 try-runtime = [
@@ -232,4 +236,6 @@ try-runtime = [
 	"polkadot-runtime-common/try-runtime",
 	"sp-runtime/try-runtime",
 	"pallet-bridge-grandpa/try-runtime",
+	"pallet-bridge-messages/try-runtime",
+	"pallet-bridge-relayers/try-runtime",
 ]
