--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ similar-asserts = { version = "1.1.0" }
 proc-macro2 =  "1.0"
 quote = "1.0"
 syn = { version = "1.0" }
+derive_more = { version = "0.99" }
 
 # Wasm builder
 substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
