--- a/pallets/living-assets-ownership/Cargo.toml
+++ b/pallets/living-assets-ownership/Cargo.toml
@@ -27,6 +27,7 @@ sp-std = { workspace = true }
 [dev-dependencies]
 serde = { workspace = true }
 hex = { version = "0.4.3" }
+derive_more = { workspace = true }
 
 # Substrate
 sp-core = { workspace = true }
