consistrency in cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -216,7 +216,7 @@ bridge-runtime-common = { git = "https://github.com/paritytech/parity-bridges-co
 pallet-bridge-grandpa = { git = "https://github.com/paritytech/parity-bridges-common.git", branch = "polkadot-v1.0.0", default-features = false }
 
 bp-laos-evolution = { git = "https://github.com/freeverseio/laos-bridge.git", branch = "dev", default-features = false }
-laos-bridge-runtime-common = { git = "https://github.com/freeverseio/laos-bridge", branch = "feature/add_networkid_of_laos_networks", default-features = false }
+laos-bridge-runtime-common = { git = "https://github.com/freeverseio/laos-bridge.git", branch = "feature/add_networkid_of_laos_networks", default-features = false }
 
 # LAOS pallets
 pallet-living-assets-ownership = { path = "./pallets/living-assets-ownership", default-features = false }
